cleaning up code

--- a/modeling/next_7_days_prediction.ipynb
+++ b/modeling/next_7_days_prediction.ipynb
@@ -53,7 +53,6 @@
    "source": [
     "df = load_data.load_county_level(data_dir = '../data/')\n",
     "df = df.sort_values('#Deaths_4/3/20', ascending=False)\n",
-    "df = exponential_modeling.leave_t_day_out(df, 1)\n",
     "# outcome_cases = load_data.outcome_cases # most recent day\n",
     "# outcome_deaths = load_data.outcome_deaths\n",
     "important_vars = load_data.important_keys(df)\n",
@@ -716,16 +715,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1841    2377.629037\n",
+       "1824    2122.454674\n",
+       "1803    2601.288356\n",
+       "1285    1781.162368\n",
+       "1831    1067.581540\n",
+       "           ...     \n",
+       "2510      13.209253\n",
+       "2491      10.549340\n",
+       "2489      11.618347\n",
+       "2462       6.735155\n",
+       "2473      11.802959\n",
+       "Name: predicted_deaths_demographics_7, Length: 2265, dtype: float64"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['predicted_deaths_demographics_7']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +834,7 @@
        " 'predicted_deaths_ensemble_no_linear_7']"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,83 +845,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('predicted_deaths_ensemble_1', 702.0690603677002)\n",
-      "('predicted_deaths_ensemble_2', 839.7768693064721)\n",
-      "('predicted_deaths_ensemble_3', 1008.1661835820913)\n",
-      "('predicted_deaths_ensemble_4', 1216.2752162694737)\n",
-      "('predicted_deaths_ensemble_5', 1476.1209205487626)\n",
-      "('predicted_deaths_ensemble_6', 1803.7827862663396)\n",
-      "('predicted_deaths_ensemble_7', 2220.9167946265798)\n",
-      "('predicted_deaths_simple_ensemble_1', 718.4795211044051)\n",
-      "('predicted_deaths_simple_ensemble_2', 877.2583674131497)\n",
-      "('predicted_deaths_simple_ensemble_3', 1076.1620234519341)\n",
-      "('predicted_deaths_simple_ensemble_4', 1326.8160685480889)\n",
-      "('predicted_deaths_simple_ensemble_5', 1644.6684817734745)\n",
-      "('predicted_deaths_simple_ensemble_6', 2050.3936397595116)\n",
-      "('predicted_deaths_simple_ensemble_7', 2571.863284017923)\n",
-      "('predicted_deaths_exponential_1', 694.7670584915884)\n",
-      "('predicted_deaths_exponential_2', 813.6678971557242)\n",
-      "('predicted_deaths_exponential_3', 952.9171522599379)\n",
-      "('predicted_deaths_exponential_4', 1119.7401417986375)\n",
-      "('predicted_deaths_exponential_5', 1369.9634510182334)\n",
-      "('predicted_deaths_exponential_6', 1676.103041292315)\n",
-      "('predicted_deaths_exponential_7', 2510.5472474088474)\n",
-      "('predicted_deaths_ensemble_no_exponential_1', 703.2200808734277)\n",
-      "('predicted_deaths_ensemble_no_exponential_2', 843.8924478613462)\n",
-      "('predicted_deaths_ensemble_no_exponential_3', 1016.8751334087701)\n",
-      "('predicted_deaths_ensemble_no_exponential_4', 1232.0821208877255)\n",
-      "('predicted_deaths_ensemble_no_exponential_5', 1502.7817322842686)\n",
-      "('predicted_deaths_ensemble_no_exponential_6', 1846.835187352999)\n",
-      "('predicted_deaths_ensemble_no_exponential_7', 2288.4303756738936)\n",
-      "('predicted_deaths_shared_exponential_1', 729.2944924252121)\n",
-      "('predicted_deaths_shared_exponential_2', 906.2612222975246)\n",
-      "('predicted_deaths_shared_exponential_3', 1132.3725389577153)\n",
-      "('predicted_deaths_shared_exponential_4', 1422.968037230512)\n",
-      "('predicted_deaths_shared_exponential_5', 1798.6812492937172)\n",
-      "('predicted_deaths_shared_exponential_6', 2287.4374716411708)\n",
-      "('predicted_deaths_shared_exponential_7', 2927.2691886801067)\n",
-      "('predicted_deaths_ensemble_no_shared_exponential_1', 690.4812167426273)\n",
-      "('predicted_deaths_ensemble_no_shared_exponential_2', 811.4794199089006)\n",
-      "('predicted_deaths_ensemble_no_shared_exponential_3', 955.300766412859)\n",
-      "('predicted_deaths_ensemble_no_shared_exponential_4', 1128.3014393001263)\n",
-      "('predicted_deaths_ensemble_no_shared_exponential_5', 1338.8309542682346)\n",
-      "('predicted_deaths_ensemble_no_shared_exponential_6', 1597.926921396384)\n",
-      "('predicted_deaths_ensemble_no_shared_exponential_7', 1920.2750612209315)\n",
-      "('predicted_deaths_demographics_1', 727.6024174359649)\n",
-      "('predicted_deaths_demographics_2', 901.4904056892859)\n",
-      "('predicted_deaths_demographics_3', 1122.343289694489)\n",
-      "('predicted_deaths_demographics_4', 1404.2959723664374)\n",
-      "('predicted_deaths_demographics_5', 1766.1557995592825)\n",
-      "('predicted_deaths_demographics_6', 2233.0821799092787)\n",
-      "('predicted_deaths_demographics_7', 2838.917848555176)\n",
-      "('predicted_deaths_ensemble_no_demographics_1', 692.0466138304105)\n",
-      "('predicted_deaths_ensemble_no_demographics_2', 815.5528466928301)\n",
-      "('predicted_deaths_ensemble_no_demographics_3', 963.3489690366426)\n",
-      "('predicted_deaths_ensemble_no_demographics_4', 1142.4726226330592)\n",
-      "('predicted_deaths_ensemble_no_demographics_5', 1362.2753709384779)\n",
-      "('predicted_deaths_ensemble_no_demographics_6', 1635.2726209256061)\n",
-      "('predicted_deaths_ensemble_no_demographics_7', 1978.3367646513425)\n",
-      "('predicted_deaths_linear_1', 651.4999999999997)\n",
-      "('predicted_deaths_linear_2', 720.8999999999996)\n",
-      "('predicted_deaths_linear_3', 790.2999999999995)\n",
-      "('predicted_deaths_linear_4', 859.6999999999995)\n",
-      "('predicted_deaths_linear_5', 929.0999999999995)\n",
-      "('predicted_deaths_linear_6', 998.4999999999994)\n",
-      "('predicted_deaths_linear_7', 1067.8999999999994)\n",
-      "('predicted_deaths_ensemble_no_linear_1', 722.0680741538908)\n",
-      "('predicted_deaths_ensemble_no_linear_2', 886.7902037610277)\n",
-      "('predicted_deaths_ensemble_no_linear_3', 1094.3277372538687)\n",
-      "('predicted_deaths_ensemble_no_linear_4', 1357.2933133852732)\n",
-      "('predicted_deaths_ensemble_no_linear_5', 1692.4563408995214)\n",
-      "('predicted_deaths_ensemble_no_linear_6', 2122.255414138401)\n",
-      "('predicted_deaths_ensemble_no_linear_7', 2676.9110053905715)\n"
+      "('predicted_deaths_ensemble_1', 600.1626404627608)\n",
+      "('predicted_deaths_ensemble_2', 717.1681474112377)\n",
+      "('predicted_deaths_ensemble_3', 859.1548541185729)\n",
+      "('predicted_deaths_ensemble_4', 1033.4723728285005)\n",
+      "('predicted_deaths_ensemble_5', 1249.8793586057272)\n",
+      "('predicted_deaths_ensemble_6', 1521.413839686602)\n",
+      "('predicted_deaths_ensemble_7', 1865.606453153696)\n",
+      "('predicted_deaths_simple_ensemble_1', 615.2008631151284)\n",
+      "('predicted_deaths_simple_ensemble_2', 755.2049269546909)\n",
+      "('predicted_deaths_simple_ensemble_3', 931.1025676202316)\n",
+      "('predicted_deaths_simple_ensemble_4', 1153.299625092355)\n",
+      "('predicted_deaths_simple_ensemble_5', 1435.5925465127027)\n",
+      "('predicted_deaths_simple_ensemble_6', 1796.396872531156)\n",
+      "('predicted_deaths_simple_ensemble_7', 2260.464361090524)\n",
+      "('predicted_deaths_exponential_1', 609.6170653650955)\n",
+      "('predicted_deaths_exponential_2', 723.1147939330539)\n",
+      "('predicted_deaths_exponential_3', 857.7433850079061)\n",
+      "('predicted_deaths_exponential_4', 1017.4369556501358)\n",
+      "('predicted_deaths_exponential_5', 1248.3588212282625)\n",
+      "('predicted_deaths_exponential_6', 1706.7765057955712)\n",
+      "('predicted_deaths_exponential_7', 2740.993437357839)\n",
+      "('predicted_deaths_ensemble_no_exponential_1', 598.9485837889222)\n",
+      "('predicted_deaths_ensemble_no_exponential_2', 716.4045297431776)\n",
+      "('predicted_deaths_ensemble_no_exponential_3', 859.3361029529996)\n",
+      "('predicted_deaths_ensemble_no_exponential_4', 1035.5315044461595)\n",
+      "('predicted_deaths_ensemble_no_exponential_5', 1255.4032719742506)\n",
+      "('predicted_deaths_ensemble_no_exponential_6', 1532.9528597584988)\n",
+      "('predicted_deaths_ensemble_no_exponential_7', 1887.1188963610969)\n",
+      "('predicted_deaths_shared_exponential_1', 617.3787499355795)\n",
+      "('predicted_deaths_shared_exponential_2', 767.7212609809259)\n",
+      "('predicted_deaths_shared_exponential_3', 959.7153512708428)\n",
+      "('predicted_deaths_shared_exponential_4', 1206.2910711324253)\n",
+      "('predicted_deaths_shared_exponential_5', 1524.80585769694)\n",
+      "('predicted_deaths_shared_exponential_6', 1938.698988256991)\n",
+      "('predicted_deaths_shared_exponential_7', 2479.8153552030494)\n",
+      "('predicted_deaths_ensemble_no_shared_exponential_1', 593.0703366024561)\n",
+      "('predicted_deaths_ensemble_no_shared_exponential_2', 696.3424177022819)\n",
+      "('predicted_deaths_ensemble_no_shared_exponential_3', 817.7282122124432)\n",
+      "('predicted_deaths_ensemble_no_shared_exponential_4', 962.2784295599081)\n",
+      "('predicted_deaths_ensemble_no_shared_exponential_5', 1136.621350233794)\n",
+      "('predicted_deaths_ensemble_no_shared_exponential_6', 1349.5101308535416)\n",
+      "('predicted_deaths_ensemble_no_shared_exponential_7', 1623.428701236445)\n",
+      "('predicted_deaths_demographics_1', 614.4172292222041)\n",
+      "('predicted_deaths_demographics_2', 760.0916473904039)\n",
+      "('predicted_deaths_demographics_3', 944.9018335557695)\n",
+      "('predicted_deaths_demographics_4', 1180.596628273592)\n",
+      "('predicted_deaths_demographics_5', 1499.7977792572046)\n",
+      "('predicted_deaths_demographics_6', 1968.8058447866804)\n",
+      "('predicted_deaths_demographics_7', 2601.2883561403596)\n",
+      "('predicted_deaths_ensemble_no_demographics_1', 594.9873240230168)\n",
+      "('predicted_deaths_ensemble_no_demographics_2', 701.5842046653362)\n",
+      "('predicted_deaths_ensemble_no_demographics_3', 828.0232823960469)\n",
+      "('predicted_deaths_ensemble_no_demographics_4', 980.0569716030056)\n",
+      "('predicted_deaths_ensemble_no_demographics_5', 1165.312035833107)\n",
+      "('predicted_deaths_ensemble_no_demographics_6', 1393.9687028423032)\n",
+      "('predicted_deaths_ensemble_no_demographics_7', 1679.7099015224815)\n",
+      "('predicted_deaths_linear_1', 569.9999999999998)\n",
+      "('predicted_deaths_linear_2', 635.2999999999997)\n",
+      "('predicted_deaths_linear_3', 700.5999999999998)\n",
+      "('predicted_deaths_linear_4', 765.8999999999999)\n",
+      "('predicted_deaths_linear_5', 831.1999999999998)\n",
+      "('predicted_deaths_linear_6', 896.4999999999998)\n",
+      "('predicted_deaths_linear_7', 961.7999999999997)\n",
+      "('predicted_deaths_ensemble_no_linear_1', 614.8902199410375)\n",
+      "('predicted_deaths_ensemble_no_linear_2', 757.1420896536904)\n",
+      "('predicted_deaths_ensemble_no_linear_3', 936.5727850381427)\n",
+      "('predicted_deaths_ensemble_no_linear_4', 1164.1205298387606)\n",
+      "('predicted_deaths_ensemble_no_linear_5', 1454.3088593118246)\n",
+      "('predicted_deaths_ensemble_no_linear_6', 1826.541908710339)\n",
+      "('predicted_deaths_ensemble_no_linear_7', 2306.9100382371753)\n"
      ]
     }
    ],
@@ -912,14 +933,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "method_keys = [c for c in df if 'predicted' in c]\n",
     "geo = ['countyFIPS', 'CountyNamew/StateAbbrev']\n",
     "preds_df = df[method_keys + geo]\n",
-    "preds_df.to_csv(\"../predictions/predictions_04_04.csv\")"
+    "preds_df.to_csv(\"../predictions/predictions_04_03.csv\")"
    ]
   },
   {
