Corrected Death Date

--- a/predictions/other_modeling/Model Comparisons.ipynb
+++ b/predictions/other_modeling/Model Comparisons.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEATH_DATE = '4/2/2020' \n",
+    "DEATH_DATE = '4/3/2020' \n",
     "ENSEMBLE_FILE = \"./yugroup/03_31.csv\"\n",
     "IHME_FILE = \"./ihme/2020-03-31.csv\"\n",
     "\n",
@@ -409,9 +409,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.7Test",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3.7test"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -423,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
