add test pipeline

--- a/hospital_quickstart.ipynb
+++ b/hospital_quickstart.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -26,7 +35,7 @@
     "from modeling.fit_and_predict import add_preds\n",
     "from functions import merge_data, severity_index\n",
     "\n",
-    "NUM_DAYS_LIST = [1, 2, 3]\n",
+    "NUM_DAYS_LIST = [1, 2, 3, 5, 6, 7]\n",
     "df_hospital = load_data.load_hospital_level()\n",
     "df_county = load_data.load_county_level()\n",
     "df_county = add_preds(df_county, NUM_DAYS_LIST=NUM_DAYS_LIST) # adds keys like \"Predicted Deaths 1-day\"\n",
@@ -46,11 +55,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**how do predictions change**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.plot()"
+   ]
   },
   {
    "cell_type": "markdown",
