add cached preds

--- a/hospital_quickstart.ipynb
+++ b/hospital_quickstart.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -38,9 +29,36 @@
     "NUM_DAYS_LIST = [1, 2, 3, 5, 6, 7]\n",
     "df_hospital = load_data.load_hospital_level()\n",
     "df_county = load_data.load_county_level()\n",
-    "df_county = add_preds(df_county, NUM_DAYS_LIST=NUM_DAYS_LIST) # adds keys like \"Predicted Deaths 1-day\"\n",
+    "df_county = add_preds(df_county, NUM_DAYS_LIST=NUM_DAYS_LIST, cached_dir='data') # adds keys like \"Predicted Deaths 1-day\"\n",
     "df = merge_data.merge_county_and_hosp(df_county, df_hospital)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6545, 7540)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -67,7 +85,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot()"
+    "plt.figure(dpi=500)\n",
+    "plt.plot(df['tot_deaths'], df['Predicted Deaths 1-day'])\n",
+    "plt.show()"
    ]
   },
   {
