--- a/predictions/other_modeling/extract_live_ihme_projections.ipynb
+++ b/predictions/other_modeling/extract_live_ihme_projections.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,8 @@
     "URL = 'https://ihmecovid19storage.blob.core.windows.net/latest/ihme-covid19.zip'\n",
     "RAW_DIREC = 'ihme/raw/'\n",
     "PROCESSED_DIREC = 'ihme/'\n",
-    "TWO_WEEKS, THREE_WEEKS = 14, 21"
+    "TWO_WEEKS, THREE_WEEKS = 14, 21\n",
+    "LOCATION = 'location_name' # keeps changing randomly from location to location_name"
    ]
   },
   {
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,7 @@
     "directories.remove('.ipynb_checkpoints')\n",
     "\n",
     "# Columns for compiled data\n",
-    "columns = ['location', 'date', 'totdea_mean', 'totdea_lower', 'totdea_upper', 'deaths_mean', 'deaths_lower', 'deaths_upper']\n",
+    "columns = [LOCATION, 'date', 'totdea_mean', 'totdea_lower', 'totdea_upper', 'deaths_mean', 'deaths_lower', 'deaths_upper']\n",
     "\n",
     "# Find latest date\n",
     "for i, directory in enumerate(directories):\n",
@@ -112,12 +113,12 @@
     "deaths = pd.read_csv(RAW_DIREC + latest_direc + '/' + csvs[0])\n",
     "\n",
     "# Get unique locations\n",
-    "locations = np.unique(deaths['location'])\n",
+    "locations = np.unique(deaths[LOCATION])\n",
     "\n",
     "for i, location in enumerate(locations):\n",
     "\n",
     "    # Subset on lcoation\n",
-    "    sub_deaths = deaths.loc[deaths['location'] == location]\n",
+    "    sub_deaths = deaths.loc[deaths[LOCATION] == location]\n",
     "    sub_deaths = sub_deaths.loc[sub_deaths['date'] >= latest_date]\n",
     "\n",
     "    sub_deaths = sub_deaths[columns].copy().reset_index()\n",
