compare current deaths with predicted deaths

--- a/hospital_quickstart.ipynb
+++ b/hospital_quickstart.ipynb
@@ -18,7 +18,8 @@
     "import pickle as pkl\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "\n",
+    "import plotly.express as px\n",
+    "import plotly\n",
     "import sys\n",
     "import load_data\n",
     "sys.path.append('modeling')\n",
@@ -35,34 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6545, 7540)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +60,36 @@
    "outputs": [],
    "source": [
     "plt.figure(dpi=500)\n",
-    "plt.plot(df['tot_deaths'], df['Predicted Deaths 1-day'])\n",
+    "R, C = 1, 2\n",
+    "plt.subplot(R, C, 1)\n",
+    "k1 = 'tot_deaths'\n",
+    "k2 = 'Predicted Deaths 3-day'\n",
+    "plt.loglog(df['tot_deaths'], df[k2], '.', ms=1)\n",
+    "plt.xlabel('tot_deaths')\n",
+    "plt.ylabel('Total Predicted Deaths (3-day)')\n",
+    "\n",
+    "plt.subplot(R, C, 2)\n",
+    "k1 = 'tot_deaths'\n",
+    "plt.loglog(df['tot_deaths'], df['Predicted Deaths 3-day'] - df['tot_deaths'], '.', ms=1)\n",
+    "plt.xlabel('tot_deaths')\n",
+    "plt.ylabel('New Predicted Deaths (3-Day)')\n",
+    "\n",
+    "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = df\n",
+    "d['New Deaths 3-day'] = d['Predicted Deaths 3-day'] - d['tot_deaths']\n",
+    "fig = px.scatter(d, x=\"tot_deaths\", y=\"New Deaths 3-day\", log_x=True, log_y=True,\n",
+    "                 hover_name=\"CountyName\", hover_data=[\"CountyName\", 'StateName'])\n",
+    "\n",
+    "plotly.offline.plot(fig, filename=\"results/new.html\")"
    ]
   },
   {
