evolving severity index

--- a/hospital_quickstart.ipynb
+++ b/hospital_quickstart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
     "from modeling.fit_and_predict import add_preds\n",
     "from functions import merge_data, severity_index\n",
     "\n",
-    "NUM_DAYS_LIST = [1, 2, 3, 5, 6, 7]\n",
+    "NUM_DAYS_LIST = [1, 2, 3, 4, 5, 6, 7]\n",
     "df_hospital = load_data.load_hospital_level()\n",
     "df_county = load_data.load_county_level()\n",
     "df_county = add_preds(df_county, NUM_DAYS_LIST=NUM_DAYS_LIST, cached_dir='data') # adds keys like \"Predicted Deaths 1-day\"\n",
@@ -48,153 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total hospitals 5943 Counter({1: 4129, 2: 455, 5: 454, 4: 453, 3: 452})\n"
+      "total hospitals 5943 Counter({1: 2942, 2: 1521, 3: 1480})\n"
      ]
     }
    ],
    "source": [
-    "df = severity_index.add_severity_index(df)\n",
+    "df = severity_index.add_severity_index(df, NUM_DAYS_LIST)\n",
     "k = 3\n",
     "s_hosp = f'Predicted Deaths Hospital {k}-day'\n",
     "s_index = f'Severity {k}-day'\n",
     "print('total hospitals', df.shape[0], Counter(df[s_index]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['ZIP'].isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_hospital['ZIP Code.1'].unique().shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7143, 191)"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_hospital.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3736    10467\n",
-       "3732    11355\n",
-       "3807    11040\n",
-       "3806    11219\n",
-       "3717    11418\n",
-       "3773    11373\n",
-       "3761    11030\n",
-       "3860    11220\n",
-       "3757    10065\n",
-       "3835    11215\n",
-       "3788    10305\n",
-       "3832    11212\n",
-       "3813    11203\n",
-       "2735    48202\n",
-       "3830    11432\n",
-       "3793    11501\n",
-       "3548    07601\n",
-       "3805    11355\n",
-       "3808    11235\n",
-       "3867    11203\n",
-       "3820    10016\n",
-       "3714    10456\n",
-       "3877    11691\n",
-       "3868    11375\n",
-       "3783    10065\n",
-       "3878    11206\n",
-       "3733    11201\n",
-       "3917    11427\n",
-       "3746    10451\n",
-       "3772    10461\n",
-       "        ...  \n",
-       "6346    77450\n",
-       "5688    76132\n",
-       "5143    37203\n",
-       "6358    77070\n",
-       "6366    77598\n",
-       "5754    84094\n",
-       "5605    75246\n",
-       "3707    87102\n",
-       "5765    84047\n",
-       "4904    02896\n",
-       "714     90031\n",
-       "4322    43207\n",
-       "6293    77479\n",
-       "3509    89103\n",
-       "227     85381\n",
-       "6321    76028\n",
-       "6353    75149\n",
-       "4495    73103\n",
-       "2854    48197\n",
-       "4433    73129\n",
-       "2265    40504\n",
-       "4496    73120\n",
-       "5588    78224\n",
-       "786     91335\n",
-       "6357    77065\n",
-       "4497    74120\n",
-       "3696    87102\n",
-       "5413    77090\n",
-       "6344    76132\n",
-       "6264    82930\n",
-       "Name: ZIP, Length: 5943, dtype: object"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['ZIP']"
    ]
   },
   {
@@ -240,32 +110,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**how do predictions change**"
+    "**how do predictions change for hospitals**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ks = ['Total Deaths Hospital', 'Hospital Employees', 'Hospital Name', 'CountyName', 'StateName']\n",
+    "for i in NUM_DAYS_LIST:\n",
+    "    ks.append(f'Severity {i}-day')\n",
+    "    ks.append(f'Predicted New Deaths Hospital {i}-day')\n",
+    "    ks.append(f'Severity Index {i}-day')\n",
+    "    df[f'Severity Index {i}-day'] = [remap[x] for x in df[f'Severity {i}-day']]\n",
+    "d = df[ks]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remap = {1: 'Low', 2: 'Medium', 3: 'High'}\n",
+    "fig = px.scatter(d, x=\"Total Deaths Hospital\", \n",
+    "                 y=\"Predicted New Deaths Hospital 3-day\", \n",
+    "                 log_x=True, log_y=True,\n",
+    "                 color=\"Severity Index 3-day\",\n",
+    "                 size='Hospital Employees',\n",
+    "                 hover_name=\"Hospital Name\", \n",
+    "                 hover_data=[\"CountyName\", 'StateName'])\n",
+    "plotly.offline.plot(fig, filename=\"results/hospital_index.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flat_list(list_list):\n",
+    "    l = []\n",
+    "    for ll in list_list:\n",
+    "        l += ll.tolist()\n",
+    "    return l\n",
+    "\n",
+    "N = d.shape[0]\n",
+    "NUM_DAYS = len(NUM_DAYS_LIST)\n",
+    "dd = pd.concat([d] * NUM_DAYS)\n",
+    "dd['Days'] = np.repeat(range(NUM_DAYS), N) + 1\n",
+    "dd['Predicted New Deaths'] = flat_list([d[f\"Predicted New Deaths Hospital {i}-day\"].values for i in range(1, NUM_DAYS + 1)])\n",
+    "dd['Severity Index'] = flat_list([d[f\"Severity Index {i}-day\"].values for i in range(1, NUM_DAYS + 1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'results/new_deaths_vs_curr_deaths.html'"
+       "'results/hospital_index_animated.html'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fig = px.scatter(df, x=\"tot_deaths\", y=\"Predicted Deaths 3-day\", log_x=True, log_y=True,\n",
-    "                 hover_name=\"CountyName\", hover_data=[\"CountyName\", 'StateName'])\n",
-    "plotly.offline.plot(fig, filename=\"results/pred_deaths_vs_curr_deaths.html\")\n",
-    "fig = px.scatter(df, x=\"tot_deaths\", y=\"Predicted New Deaths 3-day\", log_x=True, log_y=True,\n",
-    "                 hover_name=\"CountyName\", hover_data=[\"CountyName\", 'StateName'])\n",
-    "plotly.offline.plot(fig, filename=\"results/new_deaths_vs_curr_deaths.html\")"
+    "fig = px.scatter(dd, x=\"Total Deaths Hospital\", \n",
+    "                 y=\"Predicted New Deaths\", \n",
+    "                 animation_frame=\"Days\", \n",
+    "                 animation_group=\"Hospital Name\",\n",
+    "                 color='Severity Index',\n",
+    "                 size='Hospital Employees',\n",
+    "                 hover_name=\"Hospital Name\", \n",
+    "                 hover_data=[\"CountyName\", 'StateName'],\n",
+    "                 log_x=True, log_y=True)\n",
+    "fig.add_annotation(text='Circle size corresponds to hospital size', \n",
+    "                   x=max(dd['Total Deaths Hospital']),\n",
+    "                   y=max(dd['Predicted New Deaths']))\n",
+    "plotly.offline.plot(fig, filename=\"results/hospital_index_animated.html\")"
    ]
   },
   {
