--- a/hospital_quickstart.ipynb
+++ b/hospital_quickstart.ipynb
@@ -398,11 +398,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "ks = ['Total Deaths Hospital', 'Hospital Employees', 'Hospital Name', 'CountyName', 'StateName']\n",
+    "remap = {1: 'Low', 2: 'Medium', 3: 'High'}\n",
     "for i in NUM_DAYS_LIST:\n",
     "    ks.append(f'Severity {i}-day')\n",
     "    ks.append(f'Predicted New Deaths Hospital {i}-day')\n",
@@ -413,11 +414,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'results/hospital_index.html'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "remap = {1: 'Low', 2: 'Medium', 3: 'High'}\n",
     "fig = px.scatter(d, x=\"Total Deaths Hospital\", \n",
     "                 y=\"Predicted New Deaths Hospital 3-day\", \n",
     "                 log_x=True, log_y=True,\n",
@@ -430,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,20 +461,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'results/hospital_index_animated.html'"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig = px.scatter(dd, x=\"Total Deaths Hospital\", \n",
     "                 y=\"Predicted New Deaths\", \n",
@@ -477,6 +477,11 @@
     "fig.add_annotation(text='Circle size corresponds to hospital size', \n",
     "                   x=max(dd['Total Deaths Hospital']),\n",
     "                   y=max(dd['Predicted New Deaths']))\n",
+    "fig.update_layout(\n",
+    "            paper_bgcolor='rgba(0,0,0,255)',\n",
+    "            plot_bgcolor='rgba(0,0,0,255)',\n",
+    "            template='plotly_dark'\n",
+    "        )\n",
     "plotly.offline.plot(fig, filename=\"results/hospital_index_animated.html\")"
    ]
   },
